<resources>
    <string name="app_name">MatchUp-BETA</string>
    <string name="new_account">New Account</string>
    <string name="enter">Enter</string>
    <string name="premium">Confirmar cambios</string>
    <string name="name">Nombre</string>
    <string name="age">Edad</string>

    <string name="email_hint">Email</string>
    <string name="pssw_hint">Password</string>
    <string name="mssg_hint">Message</string>
    <string name="description_hint">Añade una descripcion aqui …</string>
    <string name="preferences_hint">Preferences</string>

    <!-- Text from buttons -->
    <string name="login">Login</string>
    <string name="scroll">Scroll</string>
    <string name="likes">Likes</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="chat">Chat</string>

    <!-- Switch text -->
    <string name="textOn"></string>
    <string name="textOff"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- RecyclerView scroll -->
    <string name="description_image_profile">Foto de perfil</string>
    <string name="title_scroll_cardView">Nombre, edad</string>
    <string name="status_cardView">Online</string>

    <!-- RecyclerView likes -->
    <string name="description_cross">Botón de rechazar</string>
    <string name="description_like_button">Botón de like</string>
    <string name="nameAge_person">Nombre, edad</string>

    <!-- RecyclerView messages -->
    <string name="last_message">Último mensaje XD</string>
    <string name="count_messages">1</string>

    <!-- Menu hamburguesa -->
    <string name="settings">Ajustes</string>
    <string name="help">Ayuda</string>
    <string name="profile_burguer">Perfil</string>
    <string name="favourites">Favoritos</string>
    <string name="notifications">Notificaciones</string>
    <string name="chat_burguer">Chat</string>
    <string name="logout">Cerrar sesión</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    
    <!-- create account form text -->
    <string name="invalidPasswordFormat">La contraseña debe tener al menos 8 caracteres, incluyendo una mayúscula, una minúscula, un número y un símbolo especial.</string>
    <string name="invalidEmailFormat">Introduce el correo electrónico en el formato someone@example.com</string>
    <string name="errorEmptyEmail">La dirección de correo electronico es obligatoria</string>
    <string name="errorEmptyPassword">Por favor indique una contraseña</string>
    <string name="errorPasswordMismatch">Las contraseñas no coinciden</string>
</resources>