<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single"
        android:id="@+id/titulo">
        <item
            android:title="@string/app_name"
            android:id="@+id/titleApp"
            android:icon="@drawable/matchup_logotipo"
            android:checkable="false"
            android:enabled="false"/>
    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/group1">

        <item
            android:title="@string/profile_burguer"
            android:id="@+id/perfil"
            android:icon="@drawable/ic_user_lht"/>
        <item
            android:title="@string/chat_burguer"
            android:id="@+id/chat"
            android:icon="@drawable/ic_message_lht"/>
        <item
            android:title="@string/help"
            android:id="@+id/ayuda"
            android:icon="@drawable/ic_help_lht"/>

    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:title="@string/settings"
            android:id="@+id/ajustes"
            android:icon="@drawable/ic_settings_lht" />
        <item
            android:title="Gràfic"
            android:id="@+id/grafico"
            android:icon="@drawable/ic_graphic_lht" />
        <item
            android:title="@string/logout"
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout_lht" />
    </group>
</menu>