<!-- item_message.xml -->
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="16dp"
    card_view:cardElevation="8dp"
    style="@style/AppBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">
        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_placeholder_profile"
            android:contentDescription="@string/description_image_profile"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/text_name_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameAge_person"
                style="@style/TextColor"/>
            <TextView
                android:id="@+id/text_last_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_message"
                style="@style/TextColorNoTitle"/>

        </LinearLayout>
        <TextView
            android:id="@+id/text_unread_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@drawable/circle"
            android:text="@string/count_messages"
            android:textColor="@android:color/white"
            android:padding="8dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
