<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="16dp"
    card_view:cardElevation="8dp"
    style="@style/AppBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_placeholder_profile"
            android:contentDescription="@string/description_image_profile"
            android:layout_marginEnd="16dp"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/text_name_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameAge_person"
                style="@style/TextColor" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/btn_like"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/description_like_button"
                android:layout_marginBottom="8dp"
                style="@style/heart"/>
            <ImageView
                android:id="@+id/btn_discard"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/description_cross"
                style="@style/cross"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
