<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppBackground"
    tools:context=".ProfileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:text="@string/profile"
        android:textSize="25sp"
        style="@style/TextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        style="@style/settings"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/btn_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="75dp"
        android:background="@drawable/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="25dp"
        android:text="@string/name"
        android:textSize="26sp"
        style="@style/TextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_profile"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/description_hint"
        style="@style/TextColorNoTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/preferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/preferences_hint"
        style="@style/TextColorNoTitle"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description"/>

    <Button
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:text="@string/premium"
        android:layout_marginBottom="20dp"
        style="@style/ButtonBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/menu_inf"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/menu_inf"
        android:name="com.example.matchup_beta.BottomMenuFragment"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout="@layout/fragment_bottom_menu"/>

</androidx.constraintlayout.widget.ConstraintLayout>