<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppBackground"
    tools:context=".ProfileFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:text="@string/profile"
        android:textSize="25sp"
        style="@style/TextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/edit_profile"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/edit_profile"
        app:layout_constraintBottom_toTopOf="@id/btn_profile"
        app:layout_constraintStart_toEndOf="@id/btn_profile"/>

    <ImageView
        android:id="@+id/btn_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="75dp"
        android:background="@drawable/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/description"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_profile">

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="25dp"
            android:background="@android:color/transparent"
            android:hint="@string/name"
            android:textSize="26sp"
            style="@style/TextColor"/>

        <EditText
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="25dp"
            android:background="@android:color/transparent"
            android:hint="@string/age"
            android:textSize="26sp"
            style="@style/TextColor"/>

    </LinearLayout>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginStart="10dp"
        android:hint="@string/description_hint"
        style="@style/TextColorNoTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/make_changes"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:text="@string/premium"
        android:layout_marginBottom="20dp"
        style="@style/ButtonBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/menu_inf"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/menu_inf"
        android:name="com.example.matchup_beta.BottomMenuFragment"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout="@layout/fragment_bottom_menu"/>

</androidx.constraintlayout.widget.ConstraintLayout>