<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="16dp"
    card_view:cardElevation="8dp"
    style="@style/AppBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="match_parent"
            android:layout_height="480dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_placeholder_profile"
            android:contentDescription="@string/description_image_profile" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/text_name_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_scroll_cardView"
                style="@style/TextColor"/>

            <TextView
                android:id="@+id/text_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/status_indicator"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:text="@string/status_cardView"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:fontFamily="sans-serif" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
