<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppBackground"
    tools:context=".LoginFragment">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/matchup_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:layout_width="225dp"
            android:layout_height="48dp"
            android:layout_margin="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:inputType="text"
            android:hint="@string/user_hint"
            style="@style/InputBackground"/>

        <EditText
            android:layout_width="225dp"
            android:layout_height="48dp"
            android:layout_margin="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:inputType="text"
            android:hint="@string/pssw_hint"
            style="@style/InputBackground"/>

        <Button
            android:id="@+id/enterButton"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_margin="15dp"
            android:text="@string/enter"
            style="@style/ButtonBackground"/>

    </LinearLayout>

    <Button
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:text="@string/new_account"
        android:layout_marginBottom="15dp"
        style="@style/ButtonBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>